i add the remaining sections and put a hover effect on the tools ans sponsors section. then i made it responsive at 768px

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     padding: 20px 30px;
     border-bottom: 1px solid #7c7676;
 }
-.nav ul{
+.nav_links ul{
     display: flex;
     gap: 20px;
 }
@@ -48,13 +48,30 @@ a:hover{
     justify-content: space-between;
     align-items: center;
     padding: 30px 30px;
-    img{
-        width:70vh;
-  
  }
+    .pallete{
+
+        /*p{
+            font-family: "Caveat", cursive;
+            font-size: 20px;
+        }*/
+    img{ 
+        width:70vh;
+        border: 10px solid black;
+        border-radius: 10px;
+        position: relative;
+        top: 0px;
+        left: 0px;
+  
+  }
+  .child{
+    position:absolute;
+    top:  25rem;
+    left: 40rem;
+  }
  }
  .main-text{
-   max-width:550px ;
+   max-width:600px ;
   text-align: center;
   
   
@@ -86,7 +103,7 @@ a:hover{
  .explore{
     border: 1px solid #D8D8DA;
     border-radius: 10px;
-    padding: 10px 50px ;
+    padding: 10px 30px ;
     display: inline-block;
     margin-bottom:15px ;
  }
@@ -114,19 +131,21 @@ a:hover{
         color:  #FF6154 ;
        
     }
+   
  }
+ 
  .tools{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: 1fr;
     gap: 20px;
-    margin: 30px;
+    margin: 50px;
     img{
         width: 4rem;
     }
     
  }
- .box1, .box2, .box3, .box4, .box5{
+ .box{
     background-color: #f7f7f8 ;
    
     border-radius: 10px;
@@ -134,8 +153,174 @@ a:hover{
    text-align: center;
    
    padding:30px  30px ;
-    
+   margin-bottom: 60px;
+   position: relative;
+   top: 0;
+   left:0; 
+   
+ }
+ .content{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left:0;
+    background-color: #F4DEBF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: 0.6s;
    
  }
  
+   .content:hover{
+        opacity:1;
+        border-radius: 20px;
+        transform: translateY(-1px);
+
+   }
+   .content > *{
+         transition: transform(0.6s);
+   }
+      
+    
+ .sponsors{
+    margin-bottom: 50px;
+    p{
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 50px;
+        
+    }
+ }
+ .sponsor-icon{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    gap: 5px;
+    
+    
+    img{
+        width: 3.5rem;
+    }
+    img:hover{
+        width: 6rem;
+      
+        transition: 150ms;
+    }
+
+    
+ }
+ .disney:hover{
+    img{
+        width: 6rem;
+        transition: 150ms;
+    }
+   
+ }
+
  
+ .windows{
+    text-align: center;
+    margin-top: 25px;
+    img{
+        width: 4rem;
+    }
+    img:hover{
+        width: 6rem;
+        transition: 150ms;
+        
+    }
+    
+ }
+.footer {
+   
+    height: 100vh;
+    background-color: #F7F7F8;
+    padding: 40px 40px;
+    p{
+        font-size: 13px;
+        padding-top: 50px;
+        color: #7c7676;
+    }
+
+
+}
+.list {
+    display: flex;
+    justify-content: space-between;
+    line-height: 2;
+    font-size: 18px;
+    gap: 30px;
+    a:hover{
+    color: #005CE6;
+    }
+    
+    
+   
+    
+}
+.span1{
+    font-size: 10px;
+    padding: 2px;
+    margin-left: 5px;
+    border-radius: 3px;
+}
+.span2{
+    font-weight: bold;
+    color: black;
+
+}
+.span2:hover{
+    color: #005CE6;
+}
+ 
+@media only screen  and (max-width:768px){
+    .main{
+        display: flex;
+        flex-direction: column-reverse;
+}
+.main-text{
+
+     h1{
+         font-size: 40px;
+         margin-top: 20px;
+         
+         
+     }
+     
+  }
+  .pallete img{
+    width: 80%;
+    align-items: center;
+    margin-left: 45px;
+   
+  }
+
+  .tools{
+    display: flex;
+   flex-direction: column;
+    
+  }
+
+  .sponsor-icon{
+   width: 70p;
+  }
+    
+    img{
+        width: 3.5rem;
+    }
+    .list{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+
+    }
+    .footer{
+        height: 100%;
+    }
+}
+
